--- a/stack.yml
+++ b/stack.yml
@@ -7,3 +7,7 @@ functions:
     lang: python3
     handler: ./uptime
     image: alexellis2/uptime:latest
+  buc:
+    lang: java8
+    handler: ./buc
+    image: buc:latest
