Add example from CF
https://gist.github.com/zackbloom/96e946e0c616e3c0bf160d5b93cf8e31

Signed-off-by: Alex Ellis <alexellis2@gmail.com>

--- a/stack.yml
+++ b/stack.yml
@@ -8,3 +8,7 @@ functions:
     handler: ./uptime
     image: alexellis2/uptime:latest
 
+  pbkdf2:
+    lang: node10-express
+    handler: ./pbkdf2
+    image: pbkdf2:latest
